<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.freedesktop.gstreamer</groupId>
  <artifactId>gst1-java-core</artifactId>
  <version>1.5.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>GStreamer 1.x Java Core</name>
  <description>Unofficial Java binding for the GStreamer framework</description>
  <url>https://github.com/gstreamer-java/gst1-java-core</url>

  <organization>
    <name>gstreamer-java</name>
    <url>http://www.github.com/gstreamer-java</url>
  </organization>

  <licenses>
    <license>
      <name>LGPL-3.0-only</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/gstreamer-java/gst1-java-core</url>
    <connection>scm:git:https://github.com/gstreamer-java/gst1-java-core.git</connection>
    <developerConnection>scm:git:https://github.com/gstreamer-java/gst1-java-core.git</developerConnection>
  </scm>
  
  <distributionManagement>
    <snapshotRepository>
      <id>sonatype-central</id>
      <url>https://central.sonatype.com/repository/maven-snapshots</url>
    </snapshotRepository>
    <repository>
      <id>sonatype-central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
  </distributionManagement>

  <developers>
    <developer>
      <id>neilcsmith-net</id>
      <name>Neil C Smith</name>
      <organization>Codelerity Ltd.</organization>
      <email>neil@codelerity.com</email>
      <roles>
        <role>Lead maintainer</role>
        <role>Developer</role>
      </roles>
      <url>https://www.codelerity.com</url>
    </developer>
    <developer>
      <id>wmeissner</id>
      <name>Wayne Meissner</name>
      <roles>
        <role>Founder of GStreamer 0.10 bindings</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <maven.compiler.release>8</maven.compiler.release>
    <maven.test.jvmargs></maven.test.jvmargs>
    <njord.version>0.8.5</njord.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>5.18.1</version>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <testSourceDirectory>test</testSourceDirectory>
    <testResources>
      <testResource>
        <directory>test</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
    </testResources>
    <extensions>
      <extension>
        <groupId>eu.maveniverse.maven.njord</groupId>
        <artifactId>extension3</artifactId>
        <version>${njord.version}</version>
      </extension>
    </extensions>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <forkCount>1</forkCount>
          <parallel>none</parallel>
          <reuseForks>false</reuseForks>
          <argLine>-XX:+IgnoreUnrecognizedVMOptions --enable-native-access=ALL-UNNAMED -Djna.nosys=true ${maven.test.jvmargs}</argLine>
          <excludes>
            <exclude>**/Test*.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
        <configuration>
          <release>8</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Automatic-Module-Name>org.freedesktop.gstreamer</Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>windows-gstreamer-path</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
        <property>
          <name>gstreamer.path</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <environmentVariables>
                <PATH>${gstreamer.path};${java.library.path}</PATH>
              </environmentVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.12.0</version>
            <configuration>
              <doclint>none</doclint>
              <excludePackageNames>org.freedesktop.gstreamer.lowlevel</excludePackageNames>
              <release>8</release>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
